2019-03-25  Charlie Zender  <zender@uci.edu>

	* Use fp_stdout not stdout in OpenMP regions

2019-03-24  Charlie Zender  <zender@uci.edu>

	* ncremap -P mpascice now invokes sgs_frc normalization

	* ncremap print more accurate description of pre-processing

	* Splitter prints more explicit description of parallelism/looping

2019-03-23  Charlie Zender  <zender@uci.edu>

	* ncclimo when parent dies, kill instead of orphan or reap children

	* Simplify sgs_frc_out regridding, add has_mss_val branch to sgs_frc normalization

2019-03-22  Charlie Zender  <zender@uci.edu>

	* Add stubs to read sgs_frc in nco_rgr.c

	* Allow nco_rgr_wgt() to work with nco_rgr_mpf_typ=unknown

2019-03-21  Charlie Zender  <zender@uci.edu>

	* Annotate nco_rgr_wgt() major loops

2019-03-15  Charlie Zender  <zender@uci.edu>

	* nco_rgr_wgt() read mask_b, if present, from Tempest maps

	* ncclimo/ncremap print details of parallelism strategy in header

	* Re-learn and document in code ncclimo and ncremap node-allocation rules

	* ncremap fix cmd_mpi assignment on cooley

2019-03-14  Charlie Zender  <zender@uci.edu>

	* Diagnose and explain when ERWG is found yet cannot run due to, e.g., dynamic linking errors

	* NCO 4.8.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha04: Sand';git push
	git tag -a 4.8.0-alpha04 -m 'ncclimo --job_nbr, cooley, Henry regridding';git push --tags

	* Clean-up compiler warnings

	* Merge Henry's regridding code

2019-03-13  Charlie Zender  <zender@uci.edu>

	* Use correct home bin/lib path when on cooley compute nodes

	* ncclimo fine-grain parallelism in monthly loop of regular monthly climos

	* Deprecate ACME from ncclimo/ncremap

2019-03-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha03: 55';git push
	git tag -a 4.8.0-alpha03 -m 'nco_mpf_typ_nco, mpirun -hosts cooley, SAS formula';git push --tags
